--- a/work/step_03/css/index.css
+++ b/work/step_03/css/index.css
@@ -1,23 +1,75 @@
-.container{width:1000px; height:auto; margin:0 auto;}
-		.container>*{width: 100%;}
-			#headBox{height:40px; background-color: #707070;padding:-top:12px; padding-bottom:10px;
-				box-sizing: border-box;}
-				#headeBox>h1{width: 94px; height: 18px; float:left; background-color: #fff;}
-				#headeBox>h1>a{width: 100%;height: 100%; display:block;}
-				#headeBox>h1 img{border:0; float:left;}
-				#gnb{width: 411px;height: 15px; float:right;background-color: #fff;}
-				#gnb>h2{width: 0;height: 0;overflow: hidden;}
-				#gnb>ul{width: 100%; height: 100%;}
-				#gnb>ul>li{height: 100%; margin-right:22px;}
-				#gnb>ul>li>li.gnb_01{width: ;}
-				#gnb>ul>li>li.gnb_02{width: ;}
-				#gnb>ul>li>li.gnb_03{width: ;}
-				#gnb>ul>li>li.gnb_04{width: ;}
-				#gnb>ul>li>li.gnb_05{width: ;}
-				#gnb>ul>li>li.gnb_06{width: ;}	
-				#gnb>ul a{width: 100%;height: 100%;display: block;}
-			#lnb{height:114px; background-color:#fff; margin-bottom:20px; 
-				border-bottom:1px solid #d3d3d3; box-sizing:border-box;}
-			#container{height:750px; margin-bottom:20px;background-color: #fa0;}
-			#fnb{height:276px;background-color: #e8e8e8;}
-			#footBox{height:80px;background-color: #707070;}
+/* index.css */
+
+.container{width:1000px; height:auto; margin: 0 auto;}
+.container>*{width: 100%;}
+	/* #headBox */
+	#headBox a:focus{outline: 0; border-bottom:2px solid #fa0;}
+	#headBox{height:40px; background-color: #707070; padding-top:12px; padding-bottom:10px; 
+		box-sizing: border-box; position: relative;}
+	#headBox>h1{width: 94px; height: 18px; float: left; background-color: #fff;}
+	#headBox>h1>a{width: 100%; height: 100%; display: block;}
+	#headBox>h1 img{width:100%; height:auto; border:0;}
+	#gnb{width: 411px; height: 15px; float: right;}
+	
+	#gnb>ul{width: 100%; height: 100%;}
+	#gnb>ul>li{height: 100%; margin-right:22px; float: left;}
+	
+	#gnb>ul>li.gnb_01{width:60px;}
+	#gnb>ul>li.gnb_02{width:36px;}
+	#gnb>ul>li.gnb_03{width:76px;}
+	#gnb>ul>li.gnb_04{width:78px;}
+	#gnb>ul>li.gnb_05{width:24px;}
+	#gnb>ul>li.gnb_06{width:27px; margin-right: 0;}
+	
+	#gnb>ul a{width: 100%; height: 100%; display: block;}
+	#gnb>ul>li img{width:100%; height:auto;}
+	
+	/* .head_bg:배경이미지처리 
+	.head_bg{width: 100%;height:40%;background-color: #afc;
+		position:absolute; top:0;left:0; z-index: -100%;}*/
+
+    #headBox:after{content:""; display:block; width: 100vw; height:inherit; background-color: inherit;
+		position: absolute; top:0; left:50%; margin-left:-50vw; z-index:-100;}
+
+
+
+
+	/* #lnb  */
+	#lnb{height:114px; padding: 20px 0;background-color: #fff; border-bottom: 1px solid #d3d3d3;
+	margin-bottom: 20px; box-sizing:border-box;}
+	#lnb>.brand_main{width: 700px; float:left; height: 40px; margin-top: 12px;}
+	#lnb>.brand_main>li{height: auto; float:left; margin-right: 78px;}
+	#lnb>.brand_main>li:last-child{margin-right: 0;}
+	
+
+	#lnb>.select_menu{width: 250px; float:right; height: 32px; background-color: #fff;
+		text-indent:10px; line-height:32px; box-sizing:border-box; border:1px solid #707070;}
+
+	#lnb>.brand_sel_01{margin-bottom: 5px; position:relative; z-index: 100}
+	.select_menu>dt{width: 100%; height: 100%; text-transform: uppercase; font-weight:bold;}
+	.select_menu>dd{width: 100%; height: 100%; background-color: #fff; display:none;
+		border:inherit; border-top: 0;  border-bottom: 0;}
+
+	.select_menu:hover > dd{display:block;}
+
+	
+	#container{height:auto; margin-bottom: 20px; }
+		.product{width: 100%; height:458px ; margin-bottom: 10px;}
+			.mainproduct{width: 664px; height: 100%; float:left;background-color: #fa1; overflow: hidden;}
+			.news_event{width: 326px; height: 194px;	float: right; background-color: #acf; margin-bottom:10px;}
+			.news_event>a{width: 100%;height: 100%; display:block; background-color: #7a3;
+			background-image:url("../img/content/con_02.png") ;
+			/* img 코드는 src로 불러오지만,  background-image는 url로 불러온다 */
+			background-repeat: no-repeat; background-position: center;}
+
+			.best_product{width: 326px; height: 255px;	float: right; background-color: #acf;}
+			.best_product>a{width: 100%;height: 100%; display:block;
+			background-image:url("../img/content/con_03.png") ;
+			background-repeat: no-repeat; background-position: center;}
+		.promotion{width: 100%; height:280px ; background-color: #fac;}
+			.reservation{}
+			.e_shop{}
+			.store_location{}
+	#fnb{height:276px; background-color: #e8e8e8;}
+	#footBox{height:80px; background-color: #707070;}
+
