--- a/work/step_03/css/myReset.css
+++ b/work/step_03/css/myReset.css
@@ -1,8 +1,24 @@
-html, body{margin:0; font-family: sans-serif; 
-	line-height:1.15; font-size:100%;}
+/* myreset.css */
+a:focus, input:focus, button:focus{outline:3px solid #fb0;}
+html, body{margin: 0; padding: 0;
+	color:#333;
+	 font-family: sans-serif;
+	 line-height: 1.15;
+	 font-size:100%;
+	 -ms-text-size-adjust: 100%;
+	 -webkit-text-size-adjust: 100%;}
 
-h1,h2,h3,h4,h5,h6,p,div,table,tr,td,th{margin:0;}
-ul,ol,li{list-style: none;padding: 0;}
+h1,h2,h3,h4,h5,h6,p,div,table,tr,td,th, ul, ol, li,dl, dt, dd{margin: 0; padding: 0; font:inherit;}
+ul,ol,li{list-style: none; font:inherit;}
 a{text-decoration: none; color:#555;}
-a:hover{font-weight:bold;color:#07f;}
-header, article, aside, nav, footer, section, main{display:block} 
+a:hover{font-weight:bold; color:#07f;}
+table,tr,td,th,thead,tbody,tfoot{
+	border:1px solid #777; border-spacing:0; border-collapse:collapse;
+	border-left:0; border-right:0;}
+thead{background-color:#ccc;}
+
+/* html5 */
+header, article, aside, nav, footer,section, main{display: block;}
+
+/*mySeting*/
+.hidden, h2,h3,h4,h5,h6{width: 0;height: 0; display:block; overflow:hidden;}
