--- a/work/step_03/css/myReset.css
+++ b/work/step_03/css/myReset.css
@@ -21,4 +21,13 @@ thead{background-color:#ccc;}
 header, article, aside, nav, footer,section, main{display: block;}
 
 /*mySeting*/
-.hidden, h2,h3,h4,h5,h6{width: 0;height: 0; display:block; overflow:hidden;}
+.hidden,h2,h3,h4,h5,h6{width: 0;height: 0; display:block; overflow:hidden;}
+
+.link a{width: 100%; height: 100%; background-repeat: no-repeat; display:block;}
+.link a>span{width: 0;height: 0; display:block; overflow:hidden;}
+
+.back_line{ box-sizing: border-box; position: relative;}
+.back_line:after{content:""; display:block; width: 100vw; height: inherit; 
+		position: absolute; top: 0; left:50%; margin-left: -50vw; z-index: -100; 
+		background-color: inherit;}
+
