--- a/work/step_04/css/uccast.css
+++ b/work/step_04/css/uccast.css
@@ -26,12 +26,13 @@
 	#gnb>ul>li.gnb_6{width: 106px;}
 	#gnb>ul>li.gnb_7{width: 50px; margin-right: 0;}
 
-	/*#lnb{width: 55px; height: 946px; background-color: #ccc; float: right; z-index: 100}*/
+	#lnb{width: 55px; height: 946px; background-color: #ccc; float: right; z-index: 100;
+		position: fixed; top: 0; right: 0%; background-image: url(../img/aside_lnb/lnb.png);}
 
 	#addBanner{width: 1903px; height: 601px; background-image: url(../img/section/addBanner_01.png); 
 		margin-left: -50%; background-repeat: no-repeat; background-position: center;}
 
-	#content{width: 100%;height: 326px;padding-top: 50px; padding-bottom: 30px;}
+	#content{width: 100%;height: 246px;padding-top: 50px; padding-bottom: 30px;}
 	
 	#content>ul>li{height: 100%; margin-right: 10px; margin-bottom: 30px; float: left;}
 	.content_1{width: 190px; height: 93px;}
@@ -49,6 +50,26 @@
 	#content>ul>li img{width:100%; height:auto;}
 	
 
-	#fnb{height: 322px; background-color: #565;}
+	#fnb{height: 322px; background-color: #f7f7f7;}
+	.back_line{ box-sizing:border-box; position: relative; }
+    .back_line:after{content:""; display: block; width:100vw; height:inherit; 
+	position: absolute;	top: 0; left: 50%; margin-left:-50vw; z-index:-100;
+	background-color:inherit;}
+	.menu{margin-top: 25px; background-color: inherit; font-size: 0.6em; line-height: 1.6em;  float: left;}
+	.category{font-size: 0.7em; font-weight: bold;}
+	.upcast_is{width: 99px; height: 162px;float: left; margin-right: 44px;}
+	.my_studio{width: 140px; height: 180px;float: left;margin-right: 40px; }
+	.e_learning_lms{width: 95px; height: 72px;float: left;margin-right: 54px; }
+	.M_learning_lms{width: 84px; height: 106px;float: left; margin-right: 49px;}
+	.drm_player{width: 93px; height: 145px;float: left; margin-right: 50px;}
+	.other_service{width: 119px; height: 234px;float: left; margin-right: 24px;}
+	.pricing{width: 84px; height: 72px;float: left; margin-right: 15px;}
+	.introduce{width: 99px; height: 54px;float: left; margin-right: 15px; margin-top: -60px;}
+	.ask{width: 48px; height: 91px;float: right;margin-right: 51px; margin-top: -140px;}
 
-	#footBox{height: 531px; background-color: #456;}                     
+	#footBox{width: 1903px; height: 531px; background-color: #456; margin-left: -50%;} 
+	.fnq{width: 1903px; height: 169px; float: left;}
+	.map{width: 1903px; height: 272px; float: left;}
+	.co{width: 1903px; height: 90px; float: left;}
+	/*footBox{background-image:url(../img/footer/footBox_2.png);  background-repeat: no-repeat; float:bottom;} 
+	#footBox{background-image:url(../img/footer/footBox_1.png);  background-repeat: no-repeat;  float:left;}*/
