--- a/work/step_05/jackhot.co.kr/css/index.css
+++ b/work/step_05/jackhot.co.kr/css/index.css
@@ -15,31 +15,66 @@
 
 
  */
- body{overflow-x: hidden;}
+ /*body{overflow-x: hidden;}*/
  .container{width: 960px; height: 2000px; margin: 0 auto ;}
  .container>*{width: 100%; border-left: 1px solid #fff; border-right:1px solid #fff;
  	box-sizing: border-box;}
 	/*----headBox------*/
 	#headBox{height: 120px; background-color: #282828;}
 	h1{width: 148px;height:115px ; float: left; background-color: #fff;}
-	#unb{width: 152px;height: 32px; float: right; background-color: #0ff;  transition: all 0.4s;}
+	#unb{width: auto; max-width: 132px;height: 32px; float: right; background-color: #0ff;  transition: all 0.4s; margin-right: 10px;}
 	#unb:hover{height: 100%;}
 		#unb:after{content: ""; display: block; float: left;width: 10px;height:100% ;
 		background-image: url("../img/headBox/unb_01.png");
-		background-repeat: no-repeat;background-position: right bottom;}
+		background-repeat: no-repeat;background-position: right bottom; margin-left: -10px;}
 		#unb:before{content: ""; display: block; float: right; width: 10px;height:100% ;
 		background-image: url("../img/headBox/unb_03.png");
-		background-repeat: no-repeat;background-position: right bottom;}
+		background-repeat: no-repeat;background-position: right bottom;margin-right: -10px}
 	#gnb{width: 560px;height: 20px; float: left; margin-left: 92px;  
 		margin-top: 52px; background-color: #fff;}
 
-	#lnb{height: 510px; }
+	#lnb{min-height:510px; height: auto; box-sizing:border-box; padding: 30px 0;  }
 	#lnb:after{background-color: #c0c0c0; background-image:url("../img/lnb/pattern_01.png");}
+	#lnb>dl{width: 100%; height:auto; background-color: #faa;}
+
+	#lnb>dl>dt{width: 312px; height: 215px; background-color: #6f7; float: left; margin:3px;}
+	#lnb h2{}
+	#lnb>dl>dd{width: 312px; height: 215px; background-color: #6f7; float: left; margin:3px;}
 
 	.container>#addBanner{width: 100vw; height: 630px; position: relative; left:50%; margin-left: -50vw; top:0;
-		z-index: 100; background-color: #fac; box-shadow:0 3px 3px rgba(40,40,40,0.5) ;}
+		z-index: 100; background-color: #fac; box-shadow:0 3px 3px rgba(40,40,40,0.5) ; overflow: hidden;}
+
 		/*box-shadow가로값 세로값 번짐정도 (크기값) 색상 (inset)*/
-	#search{height: 90px; background-color: #c0c0c0;}
+	#addBanner>.btn{width: 40px; height: 150px;background-color: #00fcfc; position:absolute;
+		top:50%; margin-top: -75px; z-index: 200}
+	#addBanner>.left_btn{left: 10px;}
+	#addBanner>.right_btn{right: 10px;}
+	.mini_slide_banner{width: 320px; width: 20rem; height: 370px; height: 23.125rem ;
+		position:absolute; right: 7.5rem;/*120px*/ bottom: 1.875rem;/*30px*/ 
+		background-color:rgba(40,40,40,0.7); box-shadow:0.1rem 0.1rem #282828;}
+	.mini_slide_banner>li{}
+	
+	.full_slide_banner{width: 400%; height: 100%; margin-left: -100%;}
+	.full_slide_banner>li{width: 25%; height: 100%; float: left;}
+	.full_slide_banner>.full_slide_list_01{background-color: #9ac;}
+	.full_slide_banner>.full_slide_list_02{background-color: #aac;}
+	.full_slide_banner>.full_slide_list_03{background-color: #f4c;}
+	.full_slide_banner>.full_slide_list_04{background-color: #77f;}
+	
+
+
+	#search{height: 90px; background-color: #c0c0c0; padding: 1.25rem 7.5rem; font-size: 1.5rem;}
+	#search>form,#search>form>fieldset{width: 100%; height: 100%;}
+	/*#search>form>fieldset{width: inherit; height::inherit;}*/
+	#productSearch{width: 638px; height: 100%; border:4px solid #282828;}
+	#searchButton{position:absolute;z-index: -1000;}
+	label[for="searchButton"]{width: 80px; height: 100%; background-color: #282828; display:block;
+		float: right; color:#fff; cursor:pointer; line-height:3rem; text-align: center;	font-size:1.7rem
+		;font-weight: bold; padding-right: 1rem; box-sizing: border-box;}
+		#searchButton:focus + label{outline: 3px solid #fdd color:#fdd; position:relative; z-index:1000;}
+
+
+
 	#infoBank{height: 270px; background-color: #f6f6f6;}
 	#fnb{height: 330px; background-color: #c0c0c0;}
 	#footBox{height: 180px; background-color: #adc;}
